# qhyccd

MatlabSDKdemo/qhyccdMatlab/: doCapturex64.m  doCapturex86.m  readme.txt
MatlabSDKdemo/qhyccdMatlab/include/: stdint.h.mac
MatlabSDKdemo/qhyccdMatlab/lib/x64/vc12/: qhyccd.lib
MatlabSDKdemo/qhyccdMatlab/lib/x86/vc9/: qhyccd.lib
MatlabSDKdemo/qhyccdMatlab/output/x64/: qhyccdmex.mexw64
MatlabSDKdemo/qhyccdMatlab/output/x86/: qhyccdmex.mexw32
MatlabSDKdemo/qhyccdMatlab/src/: qhyccdmex.cpp
doc/: qhy_sdk_man.adoc
fx3load/: fxload
include/: Context.h  Io.h  Pipeline.h  QDef.h  QGigE.h  QUsb.h  Stdafx.h  chatty.h  cjson.h  d5100.h  dithercontrol.h  download_fx2.h  download_fx3.h  ic16803.h  ic8300.h  img0h.h  img132e.h  img2p.h  minicam5base.h  minicam5f_m.h  minicam5s_c.h  minicam5s_m.h  minicam6f.h  polemaster.h  qhy08050g.h  qhy10.h  qhy11.h  qhy12.h  qhy128c.h  qhy15.h  qhy16.h  qhy16000.h  qhy160002ad.h  qhy16000g.h  qhy16200a.h  qhy163c.h  qhy163m.h  qhy165c.h  qhy16803a.h  qhy168c.h  (+86 more)
install_scripts/: linux_install_qhyccd_sdk_driver.sh
lib/: libqhyccd.so.2  libqhyccd.so.2.0.11
python/: cpp_funcs.py
testapp/LiveFrameMode/: CMakeLists.txt  LiveFrameSample.cpp
testapp/SingleFrameMode/: CMakeLists.txt  SingleFrameMode.cpp
testapp/generate_so/: CMakeLists.txt  generate_so.cpp
udev/: 85-qhyccd.rules
